force-app/main/default/objects/Lead/fields/Annual_Spend_on_jewelry_supplies__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend_on_jewelry_supplies__c</fullName>
    <label>Annual Spend on jewelry supplies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>