force-app/main/default/objects/Lead/fields/APT_Suite__c.field-meta.xml
<CustomField>
    <fullName>APT_Suite__c</fullName>
    <label>APT /Suite</label>
    <type>TextArea</type>
</CustomField>