force-app/main/default/objects/Lead/fields/Catalog_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Mailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalog Mailed</label>
    <type>Checkbox</type>
</CustomField>