force-app/main/default/objects/Lead/fields/Catalog_Mailed_Date1__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Mailed_Date1__c</fullName>
    <formula>DATEVALUE( Catalog_Mailed_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Mailed Date</label>
    <type>Date</type>
</CustomField>