force-app/main/default/objects/Lead/fields/Catalog_Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Mailed_Date__c</fullName>
    <formula>IF( Catalog_Mailed__c == True,  DATETIMEVALUE( NOW() ) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Mailed Date</label>
    <type>DateTime</type>
</CustomField>