force-app/main/default/objects/Lead/fields/Catalog_Offer_Code_Sent__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Offer_Code_Sent__c</fullName>
    <label>Catalog Offer Code Sent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>