force-app/main/default/objects/Lead/fields/Catalog_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Requested_Date__c</fullName>
    <formula>IF(  Catalog_Requested__c  == True, DATEVALUE(CreatedDate), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Requested Date</label>
    <type>Date</type>
</CustomField>