force-app/main/default/objects/Lead/fields/Catalog_Status__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Status__c</fullName>
    <label>Catalog Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Inprocess</fullName>
            </value>
            <value>
                <fullName>Mailed</fullName>
            </value>
            <value>
                <fullName>Vendor Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>