force-app/main/default/objects/Lead/fields/CatalogStatus__c.field-meta.xml
<CustomField>
    <fullName>CatalogStatus__c</fullName>
    <formula>IF(
    ISPICKVAL( Catalog_Status__c , &quot;Requested&quot;), &quot;Requested&quot;,
    IF(
        ISPICKVAL(Catalog_Status__c , &quot;Inprocess&quot;), &quot;Inprocess&quot;,
        IF(
            ISPICKVAL(Catalog_Status__c , &quot;Mailed&quot;), &quot;Mailed&quot;,
            IF(
                ISPICKVAL(Catalog_Status__c , &quot;Vendor Error&quot;), &quot;Vendor Error&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Status</label>
    <type>Text</type>
</CustomField>