force-app/main/default/objects/Lead/fields/CheckScheduleJobCompleted__c.field-meta.xml
<CustomField>
    <fullName>CheckScheduleJobCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckScheduleJobCompleted</label>
    <type>Checkbox</type>
</CustomField>