force-app/main/default/objects/Lead/fields/Company_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_Tax_ID__c</fullName>
    <label>Company Tax ID #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>