force-app/main/default/objects/Lead/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INMATES INACTIVE</fullName>
            </value>
            <value>
                <fullName>CUSTOMERS</fullName>
            </value>
            <value>
                <fullName>DECEASED</fullName>
            </value>
            <value>
                <fullName>EX-PLATINUM</fullName>
            </value>
            <value>
                <fullName>PLAT 4 STAR</fullName>
            </value>
            <value>
                <fullName>T PLATINUM P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>