force-app/main/default/objects/Lead/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>