force-app/main/default/objects/Lead/fields/Estimated_In_Home_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_In_Home_Date__c</fullName>
    <label>Estimated In Home Date</label>
    <type>Date</type>
</CustomField>