force-app/main/default/objects/Lead/fields/inmate1__c.field-meta.xml
<CustomField>
    <fullName>inmate1__c</fullName>
    <formula>IF( inmate__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>inmate</label>
    <type>Checkbox</type>
</CustomField>