force-app/main/default/objects/Lead/fields/inmate__c.field-meta.xml
<CustomField>
    <fullName>inmate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>inmate</label>
    <type>Checkbox</type>
</CustomField>