force-app/main/default/objects/Lead/fields/Lead_Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Offer_Code__c</fullName>
    <formula>$Setup.LeadOfferCode__c.Offer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Offer Code</label>
    <type>Text</type>
</CustomField>