force-app/main/default/objects/Lead/fields/LeadAddressKey__c.field-meta.xml
<CustomField>
    <fullName>LeadAddressKey__c</fullName>
    <formula>SUBSTITUTE(TEXT(CountryCode),&apos; &apos;,&apos;&apos;) + SUBSTITUTE(Street,&apos; &apos;,&apos;&apos;) + SUBSTITUTE(City,&apos; &apos;,&apos;&apos;) + SUBSTITUTE(TEXT(StateCode),&apos; &apos;,&apos;&apos;) + SUBSTITUTE(PostalCode,&apos; &apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadAddressKey</label>
    <type>Text</type>
</CustomField>