force-app/main/default/objects/Lead/fields/LeadAge__c.field-meta.xml
<CustomField>
    <fullName>LeadAge__c</fullName>
    <formula>IF( Lead_Age__c &gt; 20, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20),
IF( Lead_Age__c &gt; 10,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 20, 20)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <type>Text</type>
</CustomField>