force-app/main/default/objects/Lead/fields/Mapped_to_Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Mapped_to_Existing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapped to Existing Account</label>
    <type>Checkbox</type>
</CustomField>