force-app/main/default/objects/Lead/fields/Offer_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_End_Date__c</fullName>
    <formula>$Setup.LeadOfferCode__c.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer End Date</label>
    <type>Date</type>
</CustomField>