force-app/main/default/objects/Lead/fields/Offer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Start_Date__c</fullName>
    <formula>$Setup.LeadOfferCode__c.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Start Date</label>
    <type>Date</type>
</CustomField>