force-app/main/default/objects/Lead/fields/Platinum_Catalog_Requested__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Catalog_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Receive a FREE  Platinum Catalog Requested</description>
    <label>Platinum Catalog Requested</label>
    <type>Checkbox</type>
</CustomField>