force-app/main/default/objects/Lead/fields/Platinum_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Requested_Date__c</fullName>
    <formula>IF(  Platinum_Catalog_Requested__c  == True,  DATETIMEVALUE(  NOW() ) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum Requested Date</label>
    <type>DateTime</type>
</CustomField>