force-app/main/default/objects/Lead/fields/PostalAddress_Invalid__c.field-meta.xml
<CustomField>
    <fullName>PostalAddress_Invalid__c</fullName>
    <formula>PostalAddressInvalidRefrence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Address Invalid</label>
    <type>Checkbox</type>
</CustomField>