force-app/main/default/objects/Lead/fields/PostalAddressInvalidRefrence__c.field-meta.xml
<CustomField>
    <fullName>PostalAddressInvalidRefrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Address Invalid Refrence</label>
    <type>Checkbox</type>
</CustomField>