force-app/main/default/objects/Lead/fields/Sign_Up__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signup for Email Specials and Industry Expert News</description>
    <label>Sign Up</label>
    <type>Checkbox</type>
</CustomField>