force-app/main/default/objects/Lead/fields/Type_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Company__c</fullName>
    <label>Type of Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor at Shows and Craft Fairs</fullName>
            </value>
            <value>
                <fullName>Storefront or Bead Shop</fullName>
            </value>
            <value>
                <fullName>Non-profit/Charity</fullName>
            </value>
            <value>
                <fullName>Online/Website</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Please Make a Selection</fullName>
                <isActive>false</isActive>
                <label>Please Make a Selection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>