force-app/main/default/objects/Lead/fields/What_jewelry_supplies_are_you_inquiring__c.field-meta.xml
<CustomField>
    <fullName>What_jewelry_supplies_are_you_inquiring__c</fullName>
    <label>What jewelry supplies are you inquiring</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>