force-app/main/default/objects/Lead/validationRules/Annual_Spend_not_allow_negative_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Spend_not_allow_negative_values</fullName>
    <active>true</active>
    <errorConditionFormula>Annual_Spend_on_jewelry_supplies__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Annual_Spend_on_jewelry_supplies__c</errorDisplayField>
    <errorMessage>Annual Spend on jewelry supplies should be greater than or equal to 0 only.</errorMessage>
</ValidationRule>