force-app/main/default/objects/Lead/validationRules/Status_cannot_be_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_change</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
CASE(PRIORVALUE( Status ),
&quot;Unqualified&quot;,1,
&quot;New&quot;,2,
&quot;Working&quot;,3,
&quot;Qualified&quot;,4,0
) &gt;
CASE( Status,
&quot;Unqualified&quot;,1,
&quot;New&quot;,2,
&quot;Working&quot;,3,
&quot;Qualified&quot;,4,0
) 
)</errorConditionFormula>
    <errorMessage>Status cannot move to previous stage</errorMessage>
</ValidationRule>