force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Catalog_Status__c</field>
        <operation>equals</operation>
        <value>Mailed</value>
    </filters>
    <filters>
        <field>Catalog_Requested_Date__c</field>
        <operation>lessThan</operation>
        <value>4/10/2024</value>
    </filters>
    <label>All Open Leads</label>
</ListView>