force-app/main/default/objects/Lead/listViews/Web2Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Web2Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Web2Lead Queue</label>
    <queue>Web2Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>